log/build_2025-04-06_17-25-14/yyh_object/stdout_stderr.log
running egg_info
writing ../../build/yyh_object/yyh_object.egg-info/PKG-INFO
writing dependency_links to ../../build/yyh_object/yyh_object.egg-info/dependency_links.txt
writing entry points to ../../build/yyh_object/yyh_object.egg-info/entry_points.txt
writing requirements to ../../build/yyh_object/yyh_object.egg-info/requires.txt
writing top-level names to ../../build/yyh_object/yyh_object.egg-info/top_level.txt
writing manifest file '../../build/yyh_object/yyh_object.egg-info/SOURCES.txt'
running build
running build_py
copying yyh_object/Coord_Trans.py -> /home/yyh/ros2_ws/build/yyh_object/build/lib/yyh_object
running install
running install_lib
copying /home/yyh/ros2_ws/build/yyh_object/build/lib/yyh_object/Coord_Trans.py -> /home/yyh/ros2_ws/install/yyh_object/lib/python3.8/site-packages/yyh_object
byte-compiling /home/yyh/ros2_ws/install/yyh_object/lib/python3.8/site-packages/yyh_object/Coord_Trans.py to Coord_Trans.cpython-38.pyc
  File "/home/yyh/ros2_ws/install/yyh_object/lib/python3.8/site-packages/yyh_object/Coord_Trans.py", line 68
    else return None,None,None
         ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/yyh/ros2_ws/install/yyh_object/lib/python3.8/site-packages/yyh_object-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/yyh_object/yyh_object.egg-info to /home/yyh/ros2_ws/install/yyh_object/lib/python3.8/site-packages/yyh_object-0.0.0-py3.8.egg-info
running install_scripts
Installing image script to /home/yyh/ros2_ws/install/yyh_object/lib/yyh_object
writing list of installed files to '/home/yyh/ros2_ws/build/yyh_object/install.log'
